--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,13 @@
             <artifactId>gson</artifactId>
             <version>2.8.8</version>
         </dependency>
+
+        <!-- JavaFX dependency -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>16</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -56,4 +63,4 @@
             </plugin>
         </plugins>
     </build>
-</project>
+</project
